# balatro-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/balatro-knowledge/: SKILL.md
.claude/skills/balatro-knowledge/references/: blinds.md  deck.md  economy.md  jokers_principles.md  jokers_specific.md  observation.md  scoring.md  strategy.md
bot/: client.py  hand_evaluator.py
configs/: default.toml
scripts/: capture_expert.py  collect_demos.py  convert_captures.py  evaluate.py  train_bc.py  train_rl.py
src/balatro_rl/: client.py  config.py
src/balatro_rl/agents/: __init__.py  base.py  blind.py  dispatch.py  hand.py  shop.py  tracer.py
src/balatro_rl/capture/: __init__.py  interactive.py  observer.py  recorder.py  scenarios.py  state_builder.py
src/balatro_rl/env/: __init__.py  factory.py  wrappers.py
src/balatro_rl/features/: hand_evaluator.py  joker_catalog.py  joker_scoring.py
src/balatro_rl/imitation/: collector.py  dataset.py
tests/: test_agents.py  test_capture.py  test_config.py  test_env.py  test_features.py  test_heuristic_agents.py  test_imitation.py
